# Curso_Dunossauro

./: .gitignore  Dockerfile  Ordem Estudos Pydantic.docx  entrypoint.sh  requirements.txt
.github/workflows/: pipeline.yml
auxiliares/: CONECTAR FRONTEND.docx  CUIDADOS AO UTILIZAR JWT.docx  OBSERVACOES.txt
curso_dunossauro/: README.md  compose.yml  database.py  env.txt  pyproject.toml
curso_dunossauro/.github/workflows/: pipeline.yml
curso_dunossauro/curso_dunossauro/: app.py  database.py  models.py  schemas.py  security.py
curso_dunossauro/curso_dunossauro/routers/: __init__.py  auth.py  todos.py  users.py
curso_dunossauro/migrations/: env.py
curso_dunossauro/migrations/versions/: 766cefa99684_updated_at_em_users.py
curso_dunossauro/routers/: __init__.py  auth.py  todos.py
curso_dunossauro/tests/: conftest.py  test_app.py  test_db.py  test_get_session.py  test_security.py  test_todo.py  test_token.py  test_users.py
fastapi/: teste1.py
migrations/: env.py
migrations/versions/: 3e1cd17ad7b1_atualizando_db.py  60058bd3af75_criando_tabela_user.py  a73013d8069d_inserindo_tabela_de_tarefas_todos.py
pydantic_puro/: exemplo1.py  exemplo2.py  exemplo3.py  exemplo4.py  exemplo5.py  exemplo6.py
tests/: test_db.py  test_users.py
